# GamingNook

./: .gitignore  Cargo.toml  README.md  dump.rdb
src/: error.rs  games.rs  main.rs  mod.rs
src/authentication/: auth.rs
src/epic/: epicgames.rs  login.rs  mod.rs
src/gog/: goggames.rs  login.rs  mod.rs  test.rs
src/steam/: games.rs  login.rs  mod.rs  profile.rs  steamgames.rs
