[package]
name = "pixelshelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.7.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
reqwest = {version = "0.11.23", features = ["blocking"]}
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
steam-connect = "1.3.0"
steam-openid = "=0.2.0"
thiserror = "1.0.61"
tokio = {version = "1.35.1", features = ["full"]}
